dev/dep-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-2
  template:
    metadata:
      labels:
        app: nginx-2
    spec:
      containers:
        - name: nginx
          image: nginx:gjss
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config-2
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: nginx-config-2
              mountPath: /usr/share/nginx/html/new/index.html
              subPath: index.html
      volumes:
        - name: nginx-config-2
          configMap:
            name: nginx-config-2
