dev/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: myapp-service
# spec:
#   selector:
#     app: myapp
#   ports:
#   - port: 8080
#     protocol: TCP
#     targetPort: 8080
  

apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp
  ports:
  - port: 8080  # Port your application listens on
    targetPort: 8080  # Port your application is running on
    protocol: TCP
  type: NodePort  # Ensure it's of type NodePort to expose a port externally
